main-menu (1.10) UNRELEASED; urgency=low

  * If a default menu item cannot be determined, drop priority to avoid
    looping.

 -- Joey Hess <joeyh@debian.org>  Thu, 17 Nov 2005 14:15:40 -0500

main-menu (1.09) unstable; urgency=low

  * Avoid trailing commas at end of missing-provide choices list since
    cdebconf is picky. Closes: #327393

  [ Updated translations ]
  * Hindi (hi.po) by Nishant Sharma
  * Icelandic (is.po) by David Steinn Geirsson
  * Swedish (sv.po) by Daniel Nylander

 -- Joey Hess <joeyh@debian.org>  Wed, 19 Oct 2005 02:20:59 -0400

main-menu (1.08) unstable; urgency=low

  [ Colin Watson ]
  * Rip out all of the code to manually fetch localised templates; cdebconf
    has known how to deal with this itself since 2002/2003 or so.

  [ Updated translations ]
  * German (de.po) by Holger Wansing
  * Greek, Modern (1453-) (el.po) by Greek Translation Team
  * Basque (eu.po) by Piarres Beobide
  * Persian (fa.po) by Arash Bijanzadeh
  * French (fr.po) by Christian Perrier
  * Kurdish (ku.po) by Erdal Ronahi
  * Lithuanian (lt.po) by Kęstutis Biliūnas
  * Romanian (ro.po) by Eddy Petrisor
  * Ukrainian (uk.po) by Eugeniy Meshcheryakov
  * Wolof (wo.po) by Mouhamadou Mamoune Mbacke

 -- Joey Hess <joeyh@debian.org>  Mon, 26 Sep 2005 17:10:20 +0200

main-menu (1.07) unstable; urgency=low

  * Updated translations: 
    - Greek, Modern (1453-) (el.po) by Greek Translation Team
    - Hebrew (he.po) by Lior Kaplan
    - Tagalog (tl.po) by Eric Pareja

 -- Joey Hess <joeyh@debian.org>  Fri, 15 Jul 2005 16:56:27 +0300

main-menu (1.06) unstable; urgency=low

  * Updated translations:
    - Greek, Modern (1453-) (el.po) by Greek Translation Team
    - Slovak (sk.po) by Peter Mann
    - Ukrainian (uk.po) by Eugeniy Meshcheryakov
    - Vietnamese (vi.po) by Clytie Siddall

 -- Christian Perrier <bubulle@debian.org>  Wed,  6 Jul 2005 23:30:10 +0200

main-menu (1.05) unstable; urgency=low

  [ Joey Hess ]